--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,39 +37,39 @@
 							<h2>Great Idea!</h2>
 							<p>This project was an exercise in refactoring older HTML and CSS to use Flexbox for positioning. It was challenging but it proved to be a valuable learning experience.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">View the code</a></li>
+								<li><a href="https://github.com/LenWinkler/UI-III-Flexbox/tree/len-winkler" class="button">View the code</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Great_Idea.png" alt="" />
+							<img src="images/Great_Idea.png" alt="Screenshot of Great Idea website" />
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>User Interface Sprint Challenge</h2>
+							<p>This project required creating a multi page website. The original code that I was given had some missing HTML elements as well as some CSS specificity problems that needed to be solved. I also created an additional web page that was linked to from a navigation that I built.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://github.com/LenWinkler/Sprint-Challenge--User-Interface/tree/len-winkler" class="button">View The Code</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/User_Interface.png" alt="Screenshot of User Interface Website" />
 						</div>
 					</section>
 
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Sweet Eats Bakery</h2>
+							<p>This project was a study in styling with CSS. I used CSS to style a web page for a bakery. It was interesting to see just how much a webpage can be changed by editing the CSS.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://codepen.io/LenWinkler/pen/VoyavW" class="button">View the code</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/Sweet_Eats.png" alt="Screenshot of Bakery Website" />
 						</div>
 					</section>
 
